Update to 26.2, update to Java 17, remove legacy config support, remove 1.16/1.17 support #4