@@ -5,7 +5,6 @@ import eu.okaeri.configs.annotation.Comment;
 import lombok.Getter;
 import lombok.Setter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Getter
@@ -19,7 +18,7 @@ public final class LangConfig extends OkaeriConfig {
     private String invalidArgument = "&e[&6InventoryDropChance&e] &cInvalid argument! Use /idc help for help!";
     private String scrollGiven = "&e[&6InventoryDropChance&e] &aScroll given!";
 
-    private List<String> help = Arrays.asList(
+    private List<String> help = List.of(
             "&e[&6InventoryDropChance&e] &aCommands:",
             "&a/idc reload - Reloads the config",
             "&a/mnd &7- &eMake the item in your hand not drop on death",
@@ -29,13 +28,13 @@ public final class LangConfig extends OkaeriConfig {
 
     @Comment()
     @Comment("Appends to the item lore when the item has a 100% chance to not drop on death")
-    private List<String> noDropLore = Arrays.asList("&6This item will not drop on death!");
+    private List<String> noDropLore = List.of("&6This item will not drop on death!");
 
     @Comment()
     @Comment("Appends to the item lore when the item has a specific chance to not drop on death")
-    private List<String> noDropChanceLore = Arrays.asList("&6This item has a %chance%% chance to not drop on death!");
+    private List<String> noDropChanceLore = List.of("&6This item has a %chance%% chance to not drop on death!");
 
-    private List<String> scrollsLore = Arrays.asList(
+    private List<String> scrollsLore = List.of(
             "&6This item is a scroll!",
             "It put a %chance% chance to not drop the item on death!"
     );
@@ -50,7 +49,7 @@ public final class LangConfig extends OkaeriConfig {
 
     @Comment()
     private boolean sendChatMessageOnDeath = false;
-    private List<String> deathMessage = Arrays.asList(
+    private List<String> deathMessage = List.of(
             "&e[&6InventoryDropChance&e] &7You lost &c%amount%% &7of items! You saved &a%saved_amount%% &7items!"
     );
 }
